Changed map start in HRE, Poland, Lithuania, Naples and more places

--- a/main_menu/localization/english/1444_country_names_l_english.yml
+++ b/main_menu/localization/english/1444_country_names_l_english.yml
@@ -75,8 +75,8 @@
  LOG_ADJ: "Lomagne"
  CSS: "Carcassonne"
  CSS_ADJ: "Carcassonne"
- ADG: "Agde"
- ADG_ADJ: "Agde"
+ AGD: "Agde"
+ AGD_ADJ: "Agde"
  MEL: "Melgueil"
  MEL_ADJ: "Melgueil"
  LOD: "Lodève"
@@ -127,30 +127,106 @@
  NMK_ADJ: "Neumarkt"
  BTC: "Bitsch"
  BTC_ADJ: "Bitsch"
+ STT: "Stuttgart"
+ STT_ADJ: "Stuttgart"
+ URA: "Urach"
+ URA_ADJ: "Urach"
+ INT: "Interlaken"
+ INT_ADJ: "Interlaken"
+ AAR: "Aargau"
+ AAR_ADJ: "Aargau"
+ DUI: "Duino"
+ DUI_ADJ: "Duino"
  BDA: "Breda"
  BDA_ADJ: "Breda"
  BOZ: "Bergen op Zoom"
  BOZ_ADJ: "Bergen op Zoom"
  NIC: "Nice"
  NIC_ADJ: "Nice"
- ORV: "Orvieto"
- ORV_ADJ: "Orvieto"
+ COH: "Cortinchi"
+ COH_ADJ: "Cortinchi"
+ ADI: "Amondaschi"
+ ADI_ADJ: "Amondaschi"
+ ROC: "Rocca"
+ ROC_ADJ: "Rocca"
+ NUL: "Nuova Leca"
+ NUL_ADJ: "Nuova Leca"
+ VCL: "Vecchia Leca"
+ VCL_ADJ: "Vecchia Leca"
  VNS: "Venaissin"
  VNS_ADJ: "Venaissin"
+ ORV: "Orvieto"
+ ORV_ADJ: "Orvieto"
  BGM: "Bergamo"
  BGM_ADJ: "Bergamo"
  IST: "Istria"
  IST_ADJ: "Istria"
+ TTO: "Taranto"
+ TTO_ADJ: "Taranto"
+ LEC: "Lecce"
+ LEC_ADJ: "Lecce"
+ OTR: "Otranto"
+ OTR_ADJ: "Otranto"
+ BBR: "Bari"
+ BBR_ADJ: "Bari"
+ MTE: "Matera"
+ MTE_ADJ: "Matera"
+ SRR: "Sora"
+ SRR_ADJ: "Sora"
+ RSA: "Rossano"
+ RSA_ADJ: "Rossano"
+ MCA: "Modica"
+ MCA_ADJ: "Modica"
+ GCI: "Geraci"
+ GCI_ADJ: "Geraci"
  KRZ: "Krk"
  KRZ_ADJ: "Krk"
+ FPN: "Frankopan"
+ FPN_ADJ: "Frankopan"
  TRR: "Tirano"
  TRR_ADJ: "Tirano"
+ SRO: "Sondrio"
+ SRO_ADJ: "Sondrio"
+ AGE: "Angera"
+ AGE_ADJ: "Angera"
+ TIC: "Ticino"
+ TIC_ADJ: "Ticino"
+ NVR: "Novara"
+ NVR_ADJ: "Novara"
+ VLA: "Valais"
+ VLA_ADJ: "Valais"
+ ZEH: "League of the Ten Jurisdictions"
+ ZEH_ADJ: "League of the Ten Jurisdictions"
+ GHB: "League of God's House"
+ GHB_ADJ: "League of God's House"
  SNI: "Slavonia"
  SNI_ADJ: "Slavonian"
  RAM: "Ramazanids"
  RAM_ADJ: "Ramazanid"
  JAG: "Jagoldai"
  JAG_ADJ: "Jagoldai"
+ SVR: "Severin"
+ SVR_ADJ: "Severin"
+ CUM: "Cumania"
+ CUM_ADJ: "Cumania"
+ OLT: "Oltenia"
+ OLT_ADJ: "Oltenia"
+ GTN: "Gostynin"
+ GTN_ADJ: "Gostynin"
+ BLZ: "Bełz"
+ BLZ_ADJ: "Bełz"
+ POE: "Podole"
+ POE_ADJ: "Podole"
+ POD: "Podolia"
+ POD_ADJ: "Podolian"
+ GLK: "Glinski"
+ GLK_ADJ: "Glinski"
+ DZG: "Danzig"
+ DZG_ADJ: "Danzig"
+ ELB: "Elbing"
+ ELB_ADJ: "Elbing"
+ DNC: "Don Cossack"
+ DNC_ADJ: "Don Cossack"
  KZN: "Kazan"
  KZN_ADJ: "Kazani"
  SBR: "Sibir"
