--- a/main_menu/localization/english/zz_1444_country_names_l_english.yml
+++ b/main_menu/localization/english/zz_1444_country_names_l_english.yml
@@ -39,6 +39,8 @@
  UBV_ADJ: "Municher"
  LBV: "Landshut"
  LBV_ADJ: "Landshuter"
+ HAL: "Red Ruthenia"
+ HAL_ADJ: "Red Ruthenia"
 
 #Indian Subcontinent
  SIW: "Siwistan"
