Minor loc fixes and improvements to Byzantium & Ditschmarshen

--- a/main_menu/localization/english/1444_country_names_l_english.yml
+++ b/main_menu/localization/english/1444_country_names_l_english.yml
@@ -171,6 +171,8 @@
  BBR_ADJ: "Bari"
  MTE: "Matera"
  MTE_ADJ: "Matera"
+ AIA: "Andria"
+ AIA_ADJ: "Andria"
  SRR: "Sora"
  SRR_ADJ: "Sora"
  RSA: "Rossano"
@@ -211,6 +213,8 @@
  CUM_ADJ: "Cumania"
  OLT: "Oltenia"
  OLT_ADJ: "Oltenia"
+ LOV: "Lovech"
+ LOV_ADJ: "Lovech"
  GTN: "Gostynin"
  GTN_ADJ: "Gostynin"
  BLZ: "Bełz"
