--- a/main_menu/localization/english/1444_mongol_rework_l_english.yml
+++ b/main_menu/localization/english/1444_mongol_rework_l_english.yml
@@ -7,6 +7,24 @@
  seal_of_yuan: "Seal of Great Yuan"
  seal_of_yuan_desc: "The imperial seal used by the emperors of the Yuan Dynasty. A symbol of absolute sovereignty of the steppe, and the unification of the Mongol claim to China."
 
+#IO stuff
+ INTERNATIONAL_ORG_KHALKHA_CONFEDERATION: "Khalkha"
+ INTERNATIONAL_ORG_KHORCHIN_CONFEDERATION: "Khorchin"
+ INTERNATIONAL_ORG_OIRAT_CONFEDERATION: "Four Oirats"
+ khalkha_unification_tt: "The unification of the Khalkha peoples into a single realm."
+ khorchin_unification_tt: "The unification of the Khorchin peoples into a single realm."
+ oirat_unification_tt: "The unification of the Oirat peoples into a single realm."
+ no_unification_policy: "Loose Confederation"
+ unify_khalkha_policy: "Unify the Khalkha"
+ unify_khorchin_policy: "Unify the Khorchin"
+ unify_oirat_policy: "Unify the Oirats"
+ khalkha_unification_law: "Confederation Centralisation"
+ khorchin_unification_law: "Confederation Centralisation"
+ oirat_unification_law: "Confederation Centralisation"
+ khalkha_confederation_name: "Khalkha"
+ khorchin_confederation_name: "Khorchin"
+ oirat_confederation_name: "Four Oirats"
+
 #Dynamic Names
  rank_empire_horde: "Khaganate"
  rank_empire_horde_ruler_suffix_male: "Khāghān"
