--- a/main_menu/localization/english/1444_mongol_rework_l_english.yml
+++ b/main_menu/localization/english/1444_mongol_rework_l_english.yml
@@ -138,8 +138,8 @@
 #Khalkha
  JAA: "Jalayir"
  JAA_ADJ: "Jalayir"
- BEU: "Besud"
- BEU_ADJ: "Besud"
+ BZZ: "Besud"
+ BZZ_ADJ: "Besud"
  OLK: "Olkhonud"
  OLK_ADJ: "Olkhonud"
  ELJ: "Eljigin"
